--- a/Homework1.ipynb
+++ b/Homework1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "id": "7c388afa-bb5a-4c52-81a5-9993dfe66410",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
        "'1.21.5'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -24,26 +24,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "id": "a907fa14-04fe-4d0a-ae94-cde53a73a1ba",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "100% [..........................................................................] 1475504 / 1475504"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
        "'C:/Users/sabas/Documents/car_data (1).csv'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,17 +50,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "id": "444ed084-9144-4150-8018-c781bd41fa76",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'C:\\\\Users\\\\sabas\\\\Documents'"
+       "'c:\\\\Users\\\\sabas\\\\Documents\\\\GitHub\\\\mlzoomcamp'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,17 +72,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "id": "71186a3b-9905-423a-8a14-f0cc61d8bc12",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'C:\\\\Users\\\\sabas\\\\Documents'"
+       "'c:\\\\Users\\\\sabas\\\\Documents\\\\GitHub\\\\mlzoomcamp'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "id": "7cd8c388-b048-4c93-9c15-9f0a6d459b1f",
    "metadata": {},
    "outputs": [
@@ -274,20 +267,20 @@
        "4           28        18        3916  34500  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import pandas as pd\n",
-    "df = pd.read_csv(\"car_data.csv\")\n",
+    "df = pd.read_csv(\"C:\\\\Users\\\\sabas\\\\Documents\\\\Jupyter Notebooks\\\\car_data.csv\")\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "id": "a3e79709-3e7c-42f8-ac78-6ff7610b273f",
    "metadata": {},
    "outputs": [
@@ -368,7 +361,7 @@
        "0           26        19        3916  46135  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "id": "1cd89e35-2701-41a1-843d-c924380a0710",
    "metadata": {},
    "outputs": [
@@ -390,7 +383,7 @@
        "11914"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "id": "a6d3597e-6450-4463-b80b-4d068e13ad19",
    "metadata": {},
    "outputs": [
@@ -417,7 +410,7 @@
        "Name: Make, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "id": "3195985d-f70a-449f-a11c-2dea9b31a0ec",
    "metadata": {},
    "outputs": [
@@ -743,7 +736,7 @@
        "[11914 rows x 16 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -754,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "id": "8d9a5fcd-70d1-4b64-b2eb-4dde74c762c2",
    "metadata": {},
    "outputs": [
@@ -1068,7 +1061,7 @@
        "[328 rows x 16 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1080,7 +1073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "id": "195f7f24-9af2-4040-a35a-faabeac5f4b5",
    "metadata": {},
    "outputs": [
@@ -1094,7 +1087,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1106,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "id": "45310cb6-0fd2-4686-9359-82fd0c0dc276",
    "metadata": {},
    "outputs": [
@@ -1116,7 +1109,7 @@
        "34"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1128,7 +1121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "id": "317d1c5b-68b3-410e-ba19-7e6501242cb2",
    "metadata": {},
    "outputs": [
@@ -1154,7 +1147,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1166,7 +1159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 29,
    "id": "3085187b-9948-47cc-99bd-614b3bba258a",
    "metadata": {},
    "outputs": [
@@ -1176,7 +1169,7 @@
        "5"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1193,7 +1186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 30,
    "id": "e6d9afc4-16dd-4b7b-b2ff-6a07fb12a935",
    "metadata": {},
    "outputs": [
@@ -1203,7 +1196,7 @@
        "6.0"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1215,7 +1208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 31,
    "id": "8d9df4b4-3037-4bb8-8e1f-3f8209f3b7b8",
    "metadata": {},
    "outputs": [
@@ -1226,7 +1219,7 @@
        "Name: Engine Cylinders, dtype: float64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1238,7 +1231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 32,
    "id": "65c70cc7-db49-4379-bc94-7eb3d4e2ccfd",
    "metadata": {},
    "outputs": [
@@ -1259,7 +1252,7 @@
        "Name: Engine Cylinders, Length: 11914, dtype: float64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1271,7 +1264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 33,
    "id": "5661ca03-eb31-4cb5-916c-2661e1067144",
    "metadata": {},
    "outputs": [
@@ -1281,7 +1274,7 @@
        "6.0"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1293,7 +1286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 34,
    "id": "2b79911e-3dd3-40a4-9333-08763ac81d5b",
    "metadata": {},
    "outputs": [
@@ -2018,7 +2011,7 @@
        "4297        20         613  74950  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2030,7 +2023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 35,
    "id": "8eb53819-7d11-4abc-872c-39674e2cfdf4",
    "metadata": {},
    "outputs": [
@@ -2242,7 +2235,7 @@
        "4297      257.0               4.0"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2254,7 +2247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 36,
    "id": "4fd4796a-f310-49b9-92d0-62c761751c81",
    "metadata": {},
    "outputs": [
@@ -2346,7 +2339,7 @@
        "4293      240.0               4.0"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2358,7 +2351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 37,
    "id": "b935d297-7c11-47e1-b6b5-02722d637f44",
    "metadata": {},
    "outputs": [
@@ -2370,7 +2363,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2381,7 +2374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 38,
    "id": "56f32d79-63d0-4e07-83df-6e244d9aa64b",
    "metadata": {},
    "outputs": [
@@ -2399,7 +2392,7 @@
        "       [240.,   4.]])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2411,7 +2404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 39,
    "id": "3ced43f9-16d4-4b7f-9e39-0f45f7f2c9c5",
    "metadata": {},
    "outputs": [
@@ -2439,7 +2432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 40,
    "id": "fe5ed4f6-6472-4a38-907c-1de976ecc9fa",
    "metadata": {},
    "outputs": [
@@ -2449,7 +2442,7 @@
        "[1100, 800, 750, 850, 1300, 1000, 1000, 1300, 800]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2461,7 +2454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 41,
    "id": "6c8dcf0f-55ac-4771-a3fd-00cc11825e64",
    "metadata": {},
    "outputs": [
@@ -2476,7 +2469,7 @@
        "        -5.18727169e+01, -1.48262613e+02, -5.12110350e+01]])"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2498,7 +2491,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -2512,7 +2505,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "79dac59ca15030b23cd8fdecd705077bc2c6b33dacdc6a94cb76bd0a6ca1f3d6"
+   }
   }
  },
  "nbformat": 4,
